[gd_scene load_steps=9 format=3 uid="uid://bn40244nqym0c"]

[ext_resource type="Script" uid="uid://d2kkmt658g7l8" path="res://content/overlay/Overlay.gd" id="1_5tkwp"]
[ext_resource type="PackedScene" uid="uid://dadnblwwob0wo" path="res://content/inventory/Slot.tscn" id="2_q0jh6"]
[ext_resource type="PackedScene" uid="uid://bxjaxqhyvhhtb" path="res://content/overlay/Portrait.tscn" id="3_ryive"]
[ext_resource type="Texture2D" uid="uid://c7im6oqcsbf3w" path="res://textures/ui/overlay/dialogue_box.png" id="3_sbnsy"]
[ext_resource type="SpriteFrames" uid="uid://dad4mg7yn7vm6" path="res://textures/ui/overlay/cursor.tres" id="3_u4qnn"]
[ext_resource type="Script" uid="uid://ccsxpoddl8u8n" path="res://content/overlay/DialoguePanel.gd" id="4_q0jh6"]
[ext_resource type="Script" uid="uid://bw1ac77b4xp4i" path="res://content/overlay/Journal.gd" id="4_sbnsy"]
[ext_resource type="Texture2D" uid="uid://c4pejplo3771j" path="res://textures/ui/journal.png" id="5_02vph"]

[node name="Overlay" type="Node2D"]
process_mode = 3
z_index = 1000
script = ExtResource("1_5tkwp")

[node name="Blocker" type="Panel" parent="."]
visible = false
offset_right = 1280.0
offset_bottom = 960.0

[node name="DialoguePanel" type="Node2D" parent="."]
position = Vector2(41, 619)
script = ExtResource("4_q0jh6")
CLOSED = 400

[node name="CharA" parent="DialoguePanel" instance=ExtResource("3_ryive")]
visible = false
position = Vector2(300, -230)
scale = Vector2(-1, 1)

[node name="CharB" parent="DialoguePanel" instance=ExtResource("3_ryive")]
visible = false
position = Vector2(900, -230)

[node name="Background" type="NinePatchRect" parent="DialoguePanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1200.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("3_sbnsy")
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="DialoguePanel/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Text" type="RichTextLabel" parent="DialoguePanel/Background/MarginContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 32
text = "LABEL TEXT"
visible_characters_behavior = 1

[node name="Journal" type="Node2D" parent="."]
script = ExtResource("4_sbnsy")
CLOSED = 900

[node name="Background" type="TextureRect" parent="Journal"]
offset_left = 29.0
offset_top = 46.0
offset_right = 1232.0
offset_bottom = 946.0
mouse_filter = 0
texture = ExtResource("5_02vph")

[node name="Pages" type="Node2D" parent="Journal"]

[node name="Left" type="VBoxContainer" parent="Journal/Pages"]
offset_left = 145.0
offset_top = 150.0
offset_right = 560.0
offset_bottom = 817.0
alignment = 1

[node name="Right" type="VBoxContainer" parent="Journal/Pages"]
offset_left = 647.0
offset_top = 149.0
offset_right = 1138.0
offset_bottom = 820.0
alignment = 1

[node name="Cursor" type="AnimatedSprite2D" parent="."]
z_index = 1000
z_as_relative = false
sprite_frames = ExtResource("3_u4qnn")
animation = &"point"

[node name="Slot" parent="Cursor" instance=ExtResource("2_q0jh6")]
z_index = -1
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = 60.0
mouse_filter = 2

[connection signal="dialogue_finished" from="DialoguePanel" to="." method="_on_dialogue_finished"]
[connection signal="gui_input" from="DialoguePanel/Background" to="DialoguePanel" method="_on_gui_input"]
